--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     image: 'library-iis:latest'
     build:
-      context: .
+      context: ./app
     container_name: app
     depends_on:
       - db
@@ -17,7 +17,9 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
 
   db:
-    image: 'postgres:13.1-alpine'
+    image: 'db-iis:latest'
+    build:
+      context: ./db
     container_name: db
     environment:
       - POSTGRES_USER=compose-postgres
