--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       context: ./app
     container_name: app
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - "9000:8080"
     environment:
@@ -26,6 +27,11 @@ services:
     ports:
       - "5432:5432"
     container_name: db
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     environment:
       - POSTGRES_USER=compose-postgres
       - POSTGRES_PASSWORD=compose-postgres
